--- a/css/sentiestyle.css
+++ b/css/sentiestyle.css
@@ -155,3 +155,14 @@ a, a:hover{
 	border: 10px white solid;
 	box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
 }
+.content{	
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+}
+footer p{
+margin-bottom: 10px!important;
+}
+.pt-30{
+	padding-top:30px;
+}
